Fixed AlbumTest.java